open-request page and change request status

--- a/application/modules/planner/views/scripts/layout.phtml
+++ b/application/modules/planner/views/scripts/layout.phtml
@@ -17,6 +17,7 @@
 ?>
 </head>
 <body>
+
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
@@ -99,9 +100,11 @@
     <div class="modal-body">
         <p class="modal-body-p"></p>
     </div>
+    <?php /* ?>
     <div class="modal-footer">
         <button class="btn btn-primary button-submit">Save</button>
     </div>
+    <?php */ ?>
 </div>
 
 <?php echo $this->headScript(); ?>
