--- a/application/modules/planner/views/scripts/requests/index.phtml
+++ b/application/modules/planner/views/scripts/requests/index.phtml
@@ -1,4 +1,5 @@
 <?php $this->headScript()->appendFile('/js/requests.js'); ?>
+<?php /********** INCLUDE CALENDAR MODULE *****************/ ?>
 <?php $this->headScript()->appendFile('/js/calendar.js'); ?>
 <?php $this->headLink()->appendStylesheet('/css/calendar.css'); ?>
 
