hide error on Group settings page

--- a/application/modules/planner/views/scripts/group-settings/get-group-planning.phtml
+++ b/application/modules/planner/views/scripts/group-settings/get-group-planning.phtml
@@ -140,7 +140,7 @@
         </table>
         <div class="form-actions">
             <button type="submit" class="btn btn-success group-planning-save">Save</button>
-            <span class="alert alert-error">Error!</span>
+            <span class="alert alert-error" style="display: none;">Error!</span>
         </div>
     </div>
 <?php else : ?>
