user-settings page design improved

--- a/application/modules/planner/views/scripts/user-settings/index.phtml
+++ b/application/modules/planner/views/scripts/user-settings/index.phtml
@@ -86,7 +86,7 @@
                 </div>
             </td>
             <td class="">
-                <div class="underflow-container">
+                <div class="underflow-container editable">
                     <div class="underflow show-tooltip" data-original-title="Click here to change password">
                         **********
                     </div>
