--- a/application/modules/planner/views/scripts/user-settings/index.phtml
+++ b/application/modules/planner/views/scripts/user-settings/index.phtml
@@ -13,102 +13,103 @@
             <th class="col-user-birthday">Birthdate</th>
             <th class="col-user-group">Group(s)</th>
             <th class="col-user-password">Password</th>
-            <th class="col-user-work-hours">Hours <a href="#" class="show-tooltip no-action" data-original-title="(40h = 100%)"><i class="icon-info-sign"></i></a></th>
-            <th class="col-user-work-time">Start/end <a href="#" class="show-tooltip no-action" data-original-title="Default start/end time"><i class="icon-info-sign"></i></a></th>
+            <th class="col-user-work-hours">Hours <a href="#" class="show-tooltip no-action" data-original-title="(40h = 100%)" data-placement="top"><i class="icon-info-sign"></i></a></th>
+            <th class="col-user-work-time">Start/end <a href="#" class="show-tooltip no-action" data-original-title="Default start/end time" data-placement="top"><i class="icon-info-sign"></i></a></th>
             <th class="col-user-owner">Eigen/Flex</th>
         </tr>
         </thead>
         <tbody>
         <?php foreach ($this->users as $user): ?>
 
+        <?php
+        $groups = array();
+        foreach ($user['groups'] as $group) {
+            $groups[] = $group['group_name'];
+        }
+        $groups = implode(', ', $groups);
+        ?>
+
         <tr>
-            <td class="">
+            <td class="show-tooltip" data-original-title="<?php echo $user['full_name']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $user['full_name']; ?>">
+                    <div class="underflow">
                         <?php echo $user['full_name']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="<?php echo $user['address']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $user['address']; ?>">
+                    <div class="underflow">
                         <?php echo $user['address']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="<?php echo $user['phone']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $user['phone']; ?>">
+                    <div class="underflow">
                         <?php echo $user['phone']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="<?php echo $user['email']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $user['email']; ?>">
+                    <div class="underflow">
                         <?php echo $user['email']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="<?php echo $user['emergency_phone']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $user['emergency_phone']; ?>">
+                    <div class="underflow">
                         <?php echo $user['emergency_phone']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="<?php echo $user['emergency_full_name']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $user['emergency_full_name']; ?>">
+                    <div class="underflow">
                         <?php echo $user['emergency_full_name']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="<?php echo $user['birthdate']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $user['birthdate']; ?>">
+                    <div class="underflow">
                         <?php echo $user['birthdate']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
-                <?php
-                $groups = array();
-                foreach ($user['groups'] as $group) {
-                    $groups[] = $group['group_name'];
-                }
-                $groups = implode(', ', $groups);
-                ?>
+            <td class="show-tooltip" data-original-title="<?php echo $groups; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $groups; ?>">
+                    <div class="underflow">
                         <?php echo $groups; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="Click here to change password" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="Click here to change password">
+                    <div class="underflow">
                         **********
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="32<?php // echo $user['hours']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="32<?php // echo $user['hours']; ?>">
+                    <div class="underflow">
                         32<?php // echo $user['hours']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="09:00 - 18:00<?php // echo $user['time_work']['start'] . ' - ' . $user['time_work']['end']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="09:00 - 18:00<?php // echo $user['time_work']['start'] . ' - ' . $user['time_work']['end']; ?>">
+                    <div class="underflow">
                         09:00 - 18:00<?php // echo $user['time_work']['start'] . ' - ' . $user['time_work']['end']; ?>
                     </div>
                 </div>
             </td>
-            <td class="">
+            <td class="show-tooltip" data-original-title="<?php echo $user['owner']; ?>" data-placement="top">
                 <div class="underflow-container editable">
-                    <div class="underflow show-tooltip" data-original-title="<?php echo $user['owner']; ?>">
+                    <div class="underflow">
                         <?php echo $user['owner']; ?>
                     </div>
                 </div>
